Fix bug that hid external link icon on small screens

--- a/themes/alpha/static/components/main_nav.css
+++ b/themes/alpha/static/components/main_nav.css
@@ -104,10 +104,6 @@
         font-weight: normal;
         transition: font-weight 0.2s ease-out;
 
-        &::after {
-          content: none;
-        }
-
         &:hover {
           font-weight: 950;
         }
